# ArduinoCore-renesas

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  boards.txt  installed.json  package.json  platform.txt  post_install.sh  programmers.txt
.github/workflows/: compile-examples.yml  render-documentation.yml  report-size-deltas.yml  sync-labels.yml
bootloaders/CAPRI/: capri.hex
bootloaders/MUXTO/: dfu.elf  dfu.hex
bootloaders/NANOR4/: dfu_nano.hex
bootloaders/OPTA_ANALOG/: opta-analog.hex
bootloaders/OPTA_DIGITAL/: opta_digital.hex
bootloaders/PORTENTA_H33/: README.md  README.txt  dfu.elf  dfu.hex
bootloaders/SANTIAGO/: README.md  README.txt  dfu.elf  dfu.hex  dfu_composta.hex  dfu_leven.hex  dfu_minima.hex  dfu_r0.hex
bootloaders/SCIENCE_KIT/: science_kit.hex
bootloaders/THINGPLUS_RA6M5/: README.md  dfu.elf  dfu.hex
bootloaders/UNO_R4/: README.md  dfu_minima.hex
cores/arduino/: Arduino.h  FasterSafeRingBuffer.h  FifoBuffer.h  FspLinkIrq.h  FspTimer.cpp  FspTimer.h  FspTransfer.h  IRQManager.cpp  IRQManager.cpp.orig  IRQManager.h  IRQManager.h.orig  Interrupts.cpp  SafeRingBuffer.h  Serial.cpp  (+28 more)
debugger/: R7FA4M1AB.cfg  R7FA6M5BH.cfg
drivers/: portentah33.cat  portentah33.inf  renesas.cat  renesas.inf  santiago.cat  santiago.inf  sferenesas.cat  sferenesas.inf
extras/: package.sh  package_index.json.template  package_sfe.sh
libraries/Arduino_CAN/extras/test/: CMakeLists.txt
libraries/Arduino_CAN/extras/test/src/: test_calc_can_bit_timinig.cpp  test_main.cpp
svd/: R7FA4M1AB.svd
tmp/: memory_regions.ld  pinmux.inc  variant.cpp
(+1157 files in other folders)
